[package]
name = "abode_cli"
version = "0.1.0"
authors = ["funnymania <2amslekshun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.20"
keycode = "0.3.0"
tui = { version = "0.16", default-features = false, features = ['crossterm'] }

[dependencies.abode]
path = "../abode"
